<resources>
    <string name="app_name">cs528project3</string>
    <string name="fuller_labs_geofence">Visits to Fuller Labs geoFence: %d</string>
    <string name="library_geofence">Visits to Library geoFence: %d</string>
    <string name="steps_taken">Steps taken since app started: %d</string>
    <string name="address">Address %s</string>
    <string name="activity_description">Waiting for data…</string>

    <string name="activity_image_description">Image showing an illustration of the current activity</string>

    <string name="running">%s running%s</string>
    <string name="still">%s still%s</string>
    <string name="unknown_activity">%s performing an unknown activity%s</string>
    <string name="in_vehicle">%s in a vehicle%s</string>
    <string name="walking">%s walking%s</string>

    <string name="fuller_visits">fuller_visits</string>
    <string name="library_visits">library_visits</string>
    <string name="geofence_prefs_file">GEOFENCE_PREFS</string>

    <string name="fuller">fuller</string>
    <string name="library">library</string>
    <string name="geofence_toast">You have been inside the %s Geofence for 15 seconds, incrementing counter</string>

    <string name="location_permission_required">Location permission required for app</string>
    <string name="location_permission_rationale">Location permission required for map and geofence features to function.</string>
    <string name="location_permission_denied">Location permission denied. Location features disabled.</string>

    <string name="activity_permission_required">Permission required for activity recognition</string>
    <string name="activity_permission_rationale">Permission required for activity recognition features to function.</string>
    <string name="activity_permission_denied">Activity recognition permission denied. Activity recognition disabled.</string>

    <string name="background_location_required">Background location permission required for geofences</string>
    <string name="background_location_rationale">Your background location is required for geofencing to work properly. To enable background location access, please select \"Allow all the time\" in the app location settings.</string>
</resources>